Small table improvements (#67). * Right-align for better displaying of monetary amounts. * Moved style to css, no width specification (preventing scrolling).

--- a/inst/application/www/style.css
+++ b/inst/application/www/style.css
@@ -88,7 +88,7 @@ h4 {
   margin-top: 25px;
 }
 
-#Totals{
+#Totals {
   font-family: inherit;
   color: #008cc3;
   font-size: 18px;
@@ -97,6 +97,10 @@ h4 {
   margin-right: 10%;
   margin-top: 2%;
   margin-bottom: 0.5%;
+}
+
+#table {
+  overflow-x: scroll;
 }
 
 h2 {
